# An-efficient-framework-for-creating-depth-annotated-image-datasets-with-camera-and-Lidar-fusion-

./: README.md  start.sh  start.yaml
config/: calib_fisheye.yaml  calib_pinhole.yaml
floam/: CMakeLists.txt
floam/launch/: floam_rsbpearl32.launch
floam/src/: laserMappingNode.cpp  laserProcessingNode.cpp
include/: preprocess.h  read_pcd.h
lidar-cam-calibration/: CMakeLists.txt
lidar-cam-calibration/data/pcd_fisheye/: 1.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd
lidar-cam-calibration/data/pcd_pinhole/: 1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  17.pcd  18.pcd  19.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd
lidar-cam-calibration/src/: lidar_camera_p_plane.cpp  lidar_camera_p_plane_fisheye.cpp
preprocess/: CMakeLists.txt
preprocess/include/: motion_compensation.h  pose_transform.h  preprocess.h  read_pcd.h
preprocess/src/: motion_compensation.cpp  pose_transform.cpp  preprocess.cpp  read_pcd.cpp
src/: calib_pcd_select.cpp  lidar_camera_p_plane.cpp  lidar_camera_p_plane_fisheye.cpp  preprocess.cpp  read_pcd.cpp
tools/: imgbin_to_png.py  pointcloud_reader.py
tools/point_cloud_filter/: CMakeLists.txt
tools/point_cloud_filter/config/: config.yaml
tools/point_cloud_filter/src/: point_cloud_filter.cpp
